[package]
name = "sex_counter_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = {version = "0.4.44", features = ["serde"]}
chrono-tz = "0.10.4"
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "chrono"]}
tokio = { version = "1.50.0", features = ["full"] }
tower-http = {version = "0.6.8", features = ["full", "cors", "trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
